# lib-shim

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
crates/libcrun-shim/: Cargo.toml  build.rs
crates/libcrun-shim-agent/: Cargo.toml
crates/libcrun-shim-agent/src/: main.rs
crates/libcrun-shim-cli/: Cargo.toml
crates/libcrun-shim-cli/src/: main.rs
crates/libcrun-shim-proto/: Cargo.toml
crates/libcrun-shim-proto/src/: lib.rs
crates/libcrun-shim/src/: cri.rs  error.rs  events.rs  image.rs  lib.rs  linux.rs  pty.rs  shim.rs  types.rs
crates/libcrun-shim/src/macos/: VMBridge.h  VMBridge.m  VMBridge.swift  mod.rs  rpc.rs  vm.rs  vsock.rs
crates/libcrun-shim/tests/: integration_test.rs
crates/libcrun-sys/: Cargo.toml  build.rs  wrapper.h
crates/libcrun-sys/src/: lib.rs
docker/: Dockerfile.test
examples/: basic_usage.rs  health_metrics.rs  production_setup.rs  serverless_platform.rs
scripts/: test-linux-interactive.sh  test-linux.sh
tests/: integration_tests.rs
vm-image/: Dockerfile  build.sh
