[workspace]
members = [
    "crates/libcrun-shim",
    "crates/libcrun-sys",
    "crates/libcrun-shim-proto",
    "crates/libcrun-shim-agent",
    "crates/libcrun-shim-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
log = "0.4"
env_logger = "0.11"
