[package]
name = "libcrun-shim"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
log = { workspace = true }
env_logger = { workspace = true }
dirs = "5"
libcrun-shim-proto = { path = "../libcrun-shim-proto" }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
futures-util = { version = "0.3", optional = true }
sha2 = { version = "0.10", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }

[features]
default = ["image-pull"]
image-pull = ["reqwest", "futures-util", "sha2", "flate2", "tar"]

[target.'cfg(target_os = "linux")'.dependencies]
libcrun-sys = { path = "../libcrun-sys" }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
libc = "0.2"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[[example]]
name = "basic_usage"
path = "../../examples/basic_usage.rs"

