[package]
name = "libcrun-shim"
version = "0.1.0"
edition = "2021"
authors = ["Ibrahim Hamzat <hamat.ibrahim3@gmail.com>"]
description = "A unified Rust library for running OCI containers on Linux and macOS with production-ready features"
license = "Apache-2.0"
repository = "https://github.com/yourusername/libcrun-shim"
homepage = "https://github.com/yourusername/libcrun-shim"
documentation = "https://docs.rs/libcrun-shim"
keywords = ["container", "oci", "runtime", "docker", "kubernetes", "containerd", "cri"]
categories = ["os::unix-apis", "development-tools", "system"]
readme = "README.md"
exclude = [
    "vm-image/",
    "docker/",
    "scripts/",
    ".github/",
    "target/",
]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
log = { workspace = true }
env_logger = { workspace = true }
dirs = "5"
libcrun-shim-proto = { path = "../libcrun-shim-proto" }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
futures-util = { version = "0.3", optional = true }
sha2 = { version = "0.10", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
ttrpc = { version = "0.6", optional = true }
async-trait = { version = "0.1", optional = true }
tonic = { version = "0.11", optional = true, features = ["transport", "codegen"] }
prost = { version = "0.12", optional = true }
prost-types = { version = "0.12", optional = true }

[features]
default = ["image-pull"]
image-pull = ["reqwest", "futures-util", "sha2", "flate2", "tar"]
shim-v2 = ["ttrpc", "async-trait"]
cri = ["tonic", "prost", "prost-types"]

[target.'cfg(target_os = "linux")'.dependencies]
libcrun-sys = { path = "../libcrun-sys" }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
libc = "0.2"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[[example]]
name = "basic_usage"
path = "../../examples/basic_usage.rs"

[[example]]
name = "health_metrics"
path = "../../examples/health_metrics.rs"

[[example]]
name = "production_setup"
path = "../../examples/production_setup.rs"

